--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "PHPWord is a library written in PHP that create word documents.",
     "keywords": [ "word", "doc", "docx" ],
     "homepage": "http://phpword.codeplex.com",
-    "license": "GNU",
+    "license": "LGPL-3.0",
     "require": {
         "php": ">5.2.0"
     },
